# libng

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  libng_game.cap  run.sh  vs2022.bat
benchmark/: CMakeLists.txt  main.cpp  profiler.hpp
cmake/: compiler.cmake  helper.cmake  vcpkg.cmake
doc/: README.md
docs/: README.md
game/: CMakeLists.txt  main.cpp
game/client/: app_client.cpp  app_client.hpp
game/src/: libng_game_pch.hpp  main.cpp
game/src/libng_game/: libng_game_common.hpp  main.cpp
game/src/libng_game/client/: GameClient.cpp  GameClient.hpp  MainWin.cpp  MainWin.hpp  app_client.hpp
game/src/libng_game/server/: GameServer.cpp  GameServer.hpp
gnet/client/: CMakeLists.txt  main.cpp  player.cpp
gnet/concurrency/: CMakeLists.txt  cache.hpp
gnet/fs/: CMakeLists.txt  fs.cpp
gnet/include/: noncopyable.hpp  pch.hpp
gnet/log/: CMakeLists.txt  log.cpp
gnet/mm/: CMakeLists.txt  allocator.cpp
gnet/net/: CMakeLists.txt  connection.cpp  engine.cpp  io_mux.cpp  packet.cpp  socket.cpp
gnet/process/: CMakeLists.txt  controller_daemon.cpp  gateway_client_daemon.cpp  process.cpp
gnet/scheduler/: CMakeLists.txt
gnet/server/: CMakeLists.txt
gnet/synchronization/: CMakeLists.txt  locker.cpp
gnet/thread/: CMakeLists.txt  thread.cpp
gnet/timer/: timer.cpp
gnet/ui/: CMakeLists.txt
include/: dbg.hpp  error_handler.h  error_handler.hpp  noncopyable.h  noncopyable.hpp  pch.h  pch.hpp
include/log/: log.hpp
include/mm/: allocator.hpp
include/net/: packet.hpp
include/platform/: byte_order.hpp  compiler.hpp  macros.hpp  os.hpp
include/process/: daemon.hpp  login_daemon.hpp
include/serialization/: deserializer.hpp
libcxx/: config.hpp  gspan.hpp  gstring.h  gstring.hpp  guptr.hpp  gvector.h  gvector.hpp
libcxx/gnet/: string.hpp  vector.hpp
libng/: pch.hpp
libng/client/: CMakeLists.txt  game.cpp  game.hpp  player.cpp  player.hpp  test.hpp
libng/compiler/: CMakeLists.txt  ShaderCodeGen.cpp  ShaderCodeGen.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  ShaderCompilerUtil.hpp  ShaderLexer.cpp  ShaderLexer.hpp  ShaderParser.cpp  ShaderParser.hpp  ShaderSemantic.cpp  ShaderSemantic.hpp  main.cpp
libng/compiler/app/: CMakeLists.txt  main.cpp
libng/compiler/app/src/: main.cpp
libng/core/: CMakeLists.txt
libng/debug/: SourceLocation.hpp  Util.hpp
libng/device/: CMakeLists.txt
libng/editor/: CMakeLists.txt
libng/editor/app/: CMakeLists.txt
libng/editor/app/src/: main.cpp
libng/engine/: CMakeLists.txt
libng/exception/: error.hpp
libng/file/: CMakeLists.txt  File.hpp  FilePath.hpp  MemMapFile.cpp  MemMapFile.hpp
libng/fs/: CMakeLists.txt  fs.cpp
libng/include/: dbg.hpp  pch.hpp
libng/libcxx/: StringUtil.cpp  StringUtil.hpp  UtfUtil.hpp  fmt.hpp  string.hpp  util.hpp  vector.hpp
libng/log/: CMakeLists.txt  log.cpp  log.hpp
libng/math/: Maths.hpp  Rect2.hpp  Tuple3.hpp  Tuple4.hpp  Vec2.hpp
libng/memory/: CMakeLists.txt  ComPtr.hpp  SPtr.hpp  utility.hpp
libng/mm/: CMakeLists.txt  LinearAllocator.cpp  LinearAllocator.hpp  SPtr.hpp  allocator.cpp  utility.hpp
libng/net/: connection.hpp  engine.cpp  io_mux.hpp  socket.cpp  socket_addr.cpp
libng/platform/: byte_order.hpp  compiler.hpp  endian.hpp  graphics.hpp  machine.hpp
libng/plugin/: CMakeLists.txt
libng/process/: CMakeLists.txt  process.cpp  process.hpp
libng/renderer/: AdapterInfo.hpp  CMakeLists.txt  RenderContext.cpp  RenderContext.hpp  RenderContextCreateDesc.hpp  Renderer.cpp  Renderer.hpp
libng/scheduler/: CMakeLists.txt  scheduler.cpp
libng/script/: CMakeLists.txt
libng/server/: CMakeLists.txt
libng/shader/: CMakeLists.txt  ShaderCodeGen.cpp  ShaderCompiler.cpp  ShaderCompiler.hpp  ShaderLexer.cpp  ShaderLexer.hpp  ShaderParser.cpp  ShaderParser.hpp  ShaderSemantic.cpp  ShaderUtil.hpp
libng/synchronization/: CMakeLists.txt  locker.cpp
libng/thread/: CMakeLists.txt  thread.cpp
libng/timer/: CMakeLists.txt  timer.cpp
libng/types/: Object.hpp  RefCountBase.hpp  enum.hpp  function.hpp  noncopyable.hpp  utility.hpp
libng/ui/: BaseApp.hpp  BaseWindow.cpp  BaseWindow.hpp  CMakeLists.txt  UIApp.cpp  UIWindow.cpp
sample/: CMakeLists.txt  app.hpp  app_client.cpp  app_client.hpp  app_server.cpp  app_server.hpp  main.cpp
scripts/: build.sh  fmt.sh  run.sh  test-client.sh  tmux.sh  unittest.sh
scripts/execute/: execute_on_linux.sh  tmux_on_linux.sh
scripts/fmt/: format_on_linux.sh
scripts/install/: linux.sh  vcpkg_on_linux.sh
scripts/linux/: format_on_linux.sh  tmux_on_linux.sh  vcpkg_on_linux.sh
scripts/test/: client.sh  server.sh
scripts/win32/: build.bat  build_compiler.bat  build_game.bat  build_tests.bat  clean.bat  execute.bat  execute_compiler.bat  fmt.bat  run.bat  unit_test.bat  vcpkg.bat
src/client/: client.cpp  client.h  client.hpp  game.cpp  game.h  game.hpp  main.cpp  player.cpp  player.h  player.hpp  render.cpp  render.h  ui.cpp  ui.h  ui.hpp
src/concurrency/: locker.cpp  locker.h  locker.hpp
src/fs/: CMakeLists.txt  fs.cpp  fs.hpp
src/io/: io.cpp  io.hpp
src/log/: CMakeLists.txt  log.cpp  log.hpp
src/mm/: allocator.h  allocator.hpp
src/net/: CMakeLists.txt  connection.hpp  engine.hpp  io_mux.hpp  packet.h  packet_header.hpp  socket.cpp  socket.hpp  socket_addr.cpp  socket_addr.h  socket_addr.hpp
src/process/: CMakeLists.txt  controller_daemon.hpp  daemon.cpp  daemon.hpp  gateway_client_daemon.hpp  gateway_daemon.cpp  gateway_daemon.hpp  gateway_server_daemon.cpp  (+8 more)
test/: CMakeLists.txt  app.hpp  main.cpp
test/UnitTest/: UnitTest.cpp  UnitTest.hpp
test/app/: app.hpp
test/compiler/: ShaderParser.hpp
test/core/libcxx/: vector.hpp
test/core/memory/: LinearAllocator.hpp  SPtr.hpp
test/data/Json/: config.json
test/data/MemMapFile/: sample.txt
test/eastl/: vector.hpp
test/libcxx/: vector.hpp
test/memory/: SPtr.hpp
test/mm/: SPtr.hpp
test/src/libng_test/integration_test/: integration_test.cpp  integration_test.hpp
test/src/libng_test/unit_test/: UnitTestBase.cpp  UnitTestBase.hpp
test/unit_test/: base.cpp  base.hpp
(+620 files in other folders)
