cmake_minimum_required(VERSION 3.10)

set(project_name         "libng")
set(dir_src              "${CMAKE_CURRENT_LIST_DIR}/${project_name}")
set(dir_vcpkg            "externals/vcpkg")
set(dir_cmake            "cmake")
set(CMAKE_TOOLCHAIN_FILE "${dir_vcpkg}/scripts/buildsystems/vcpkg.cmake")

project(${project_name})

include(${dir_cmake}/compiler.cmake)
include(${dir_cmake}/vcpkg.cmake)
include(${dir_cmake}/helper.cmake)

include_directories("${CMAKE_CURRENT_LIST_DIR}")
include_directories("${dir_src}")

OPTION(BUILD_GAME      "Build Game"      OFF)
OPTION(BUILD_TEST      "Build Test"      OFF)
OPTION(BUILD_BENCHMARK "Build Benchmark" OFF)
OPTION(BUILD_SERVER    "Build Server"    OFF)

IF(BUILD_GAME)
  add_subdirectory(game)
  add_subdirectory("${dir_src}/ui")
  add_subdirectory("${dir_src}/log")
  add_subdirectory("${dir_src}/file")
  add_subdirectory("${dir_src}/libcxx")
  add_subdirectory("${dir_src}/exception")
  add_subdirectory("${dir_src}/memory")
  add_subdirectory("${dir_src}/renderer")
ENDIF(BUILD_GAME)

IF(BUILD_TEST)
  add_subdirectory(test)
  add_subdirectory("${dir_src}/log")
  add_subdirectory("${dir_src}/memory")
  add_subdirectory("${dir_src}/file")
  add_subdirectory("${dir_src}/libcxx")
  add_subdirectory("${dir_src}/exception")
  # add_subdirectory("${dir_src}/net")
  # add_subdirectory("${dir_src}/process")
  # add_subdirectory("${dir_src}/server")
ENDIF(BUILD_TEST)

IF(BUILD_BENCHMARK)
  add_subdirectory(benchmark)
ENDIF(BUILD_BENCHMARK)

IF(BUILD_SERVER)
  add_subdirectory("${dir_src}/concurrency")
  add_subdirectory("${dir_src}/fs")
  add_subdirectory("${dir_src}/log")
  add_subdirectory("${dir_src}/memory")
  add_subdirectory("${dir_src}/net")
  add_subdirectory("${dir_src}/process")
  add_subdirectory("${dir_src}/scheduler")
  add_subdirectory("${dir_src}/server")
  add_subdirectory("${dir_src}/synchronization")
  add_subdirectory("${dir_src}/thread")
  add_subdirectory("${dir_src}/timer")
ENDIF(BUILD_SERVER)
